Update of the launcher script, it should be fully portable now Also added a ini file, same structure as the windows version